# testing

./: .gitignore  main.py  modeset.py  movement.py  navigation.py  rawmovement.py  test.py  waypoint.py
triton/: CMakeLists.txt  CMakeLists.txt~  package.xml  setup.py  triton.launch
triton/scripts/: arm.py  between.py  circle_move.py  circle_move.py~  disarm.py  norm_to_pwm.py  pwm_to_norm.py  set_RCIOPower.py  square_move.py  square_move.py~
triton/src/: mainLoop.py  mainLoop.py~
