<package>
	<name>triton</name>
	<version>1.2.4</version>
	<description>
	This package contains code for control of SDRC AUV Triton for Robosub 2016
	</description>
	<maintainer email="justin.arispe@gmail.com">PR-Justin</maintainer>
	<license>BSD</license>


	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>uwsim</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>mavros</build_depend>


	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>uwsim</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>mavros</run_depend>


</package>
